--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "devDependencies": {
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@rollup/plugin-babel": "^6.0.2",
     "rollup": "^3.3.0",
     "rollup-plugin-babel": "^4.4.0"
@@ -11,5 +13,9 @@
   "scripts": {
     "build": "rollup -c",
     "watch": "rollup -cw"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
