--- a/package.json
+++ b/package.json
@@ -3,12 +3,20 @@
   "module": "dist/esm/index.js",
   "devDependencies": {
     "@babel/core": "^7.20.2",
+    "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@rollup/plugin-babel": "^6.0.2",
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
     "rollup": "^3.3.0",
-    "rollup-plugin-babel": "^4.4.0"
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.3"
   },
   "scripts": {
     "build": "rollup -c",
